--- a/ilmo/templates/list.html
+++ b/ilmo/templates/list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="container">
-  <p><b>All events</b></p>
+  <h1>All events</h1>
   <table>
     <tr>
       <th>Name</th>
