--- a/ilmo/templates/list.html
+++ b/ilmo/templates/list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="container">
-  <h1>All events</h1>
+  <h1>Coming events</h1>
   <table>
     <tr>
       <th>Name</th>
@@ -14,7 +14,7 @@
     </tr>
     {% for event in event_list %}
     <tr>
-      <th><a href ="../event/{{event.id}}"> {{ event.name }}</a></th>
+      <th><a href ="../../event/{{event.id}}"> {{ event.name }}</a></th>
       <th>{{ event.event_date }}</th>
       <th>{{ event.close_date }}</th>
     </tr>
