--- a/ilmo/templates/registration_form.html
+++ b/ilmo/templates/registration_form.html
@@ -17,7 +17,7 @@
   {% if event.fb_url %}
   <tr>
     <td>FB URL</td>
-    <td>{{event.fb_url}}</td>
+    <td><a href='{{event.fb_url}}'>Facebook-event</a></td>
   </tr>
   {% endif %}
   <tr>
@@ -25,16 +25,25 @@
     <td>{{event.close_date}}</td>
   </tr>
 </table>
+{% if event.image_url %}
+<img src="{{event.image_url}}" alt="PHOTO">
+{% endif %}
 <p>{{event.description}}</p>
-<h2>Attendees ({{ attendees|length }})</h2>
+<h4>Attendees ({{ attendees|length }})</h4>
+<div id="ilmoittautuneet" style="display: none;">
 {% for attendee in attendees %}
 <p>{{attendee.attendee_name}}</p>
 {% endfor %}
-{% if event.is_full %}
+</div>
+<div id='ilmoittautuneet_toggle' onclick="document.getElementById('ilmoittautuneet').style.display='';document.getElementById('ilmoittautuneet_toggle').style.display='none';"><a>näytä ilmoittautuneet</a></div>
+{% if event.is_full and not event.backup %}
 <p>Event is full :(</p>
 {% elif event.is_past %}
 <p>Registration time has past :|</p>
 {% else %}
+{% if event.backup and event.is_full %}
+<p>Event is full, you are registering on a backup place</p>
+{% endif %}
 <form action="/fi/ilmo/event/{{event.id}}/" method="post">
   {% csrf_token %}
   {{ form }}
