FIX: dynamic paths to template folders and refactored templates

--- a/ilmo/templates/list.html
+++ b/ilmo/templates/list.html
@@ -10,7 +10,7 @@
   {% else %}
   <h1>All events</h1>
   {% endif %}
-  <table>
+  <table class='table'>
     <tr>
       <th>Name</th>
       <th>Date</th>
