--- a/ilmo/templates/registration_form.html
+++ b/ilmo/templates/registration_form.html
@@ -4,8 +4,9 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
+<div class="container">
 <h1>{{event.name}}</h1>
-<table>
+<table class='table'>
   <tr>
     <td>Event date</td>
     <td>{{event.event_date}}</td>
@@ -44,10 +45,13 @@
 {% if event.backup and event.is_full %}
 <p>Event is full, you are registering on a backup place</p>
 {% endif %}
-<form action="/fi/ilmo/event/{{event.id}}/" method="post">
+<form action="" method="post">
   {% csrf_token %}
-  {{ form }}
+  <table class='table'>
+    {{ form.as_table }}
+  </table>
   <input type="Submit" value="submit" />
 </form>
+</div>
 {% endif %}
 {% endblock content %}
