change submit button bs style

--- a/templates/registration_form.html
+++ b/templates/registration_form.html
@@ -49,7 +49,7 @@
     {{ form.as_table }}
   </table>
 <div class="form-group">
-  <input type="Submit" value="submit" class="form-control" />
+<input type="Submit" value="submit" class="btn btn-primary btn-block" />
 </div>
 </form>
 <h3>Attendees</h3>
