--- a/ilmo_app/templates/list.html
+++ b/ilmo_app/templates/list.html
@@ -1,27 +1,53 @@
 {% extends "base.html" %}
-
 {% block title %}{% endblock title %}
 
 {% block content %}
 <div class="container">
-  {% if coming %}
-  <h1>Coming events</h1>
-  {% else %}
-  <h1>All events</h1>
-  {% endif %}
+  <h1>Osakunnan tapahtumat</h1>
+  <br> 
+  <p>Täältä löydät osakunnan tulevat tapahtumat</p>  
+  <br>
+  <h2>{% if coming %}Tulevat tapahtumat{% else %}Kaikki tapahtumat{% endif %}</h2>
   <table class='table'>
     <tr>
-      <th>Name</th>
-      <th>Date</th>
-      <th>Registration closes</th>
+      <th>Tapahtuma</th>
+      <th>Ajankohta</th>
+      <th>Ilmoittautuminen päättyy</th>
     </tr>
-    {% for event in event_list %}
+   {% if coming %}
+    {% for event in coming_events %}
     <tr>
-      <th><a href ="../../event/{{event.id}}"> {{ event.name }}</a></th>
+      <th><a href ="{{event.form_name}}"> {{ event.name }}</a></th>
       <th>{{ event.event_date }}</th>
       <th>{{ event.close_date }}</th>
     </tr>
     {% endfor %}
+   {% else %}
+    {% for event in event_list %}
+    <tr>
+      <th><a href ="{{event.form_name}}"> {{ event.name }}</a></th>
+      <th>{{ event.event_date }}</th>
+      <th>{{ event.close_date }}</th>
+    </tr>
+    {% endfor %}
+   {% endif %}
   </table>
+  {% if coming and head_past_events %}
+  <h2>Menneitä tapahtumia</h2>
+  <table class='table'>
+    <tr>
+      <th>Tapahtuma</th>
+      <th>Ajankohta</th>
+      <th>Ilmoittautuminen päättyy</th>
+    </tr>
+    {% for event in head_past_events %}
+    <tr>
+      <th><a href ="{{event.form_name}}"> {{ event.name }}</a></th>
+      <th>{{ event.event_date }}</th>
+      <th>{{ event.close_date }}</th>
+    </tr>
+    {% endfor %}
+ </table>
+ {% endif %} 
 </div>
 {% endblock content %}
