--- a/ilmo_app/templates/registration_form.html
+++ b/ilmo_app/templates/registration_form.html
@@ -4,64 +4,74 @@
 
 {% block content %}
 <div class="container">
+<h1>{{event.name}}</h1>
 {% if event.image_url %}
 <img src="{{event.image_url}}" alt="PHOTO" class="img-responsive">
 {% endif %}
-<h1>{{event.name}}</h1>
 <table class='table'>
   <tr>
-    <td>Event date</td>
+    <td>Aika</td>
     <td>{{event.event_date}}</td>
   </tr>
   <tr>
-    <td>Place</td>
+    <td>Paikka</td>
     <td>{{place.name}}</td>
   </tr>
   {% if event.fb_url %}
   <tr>
-    <td>FB URL</td>
-    <td><a href='{{event.fb_url}}'>Facebook-event</a></td>
+    <td>Facebook-tapahtuma</td>
+    <td><a href='{{event.fb_url}}'>Linkki</a></td>
   </tr>
   {% endif %}
   <tr>
-    <td>Registration closes</td>
+    <td>Ilmoittautuminen päättyy</td>
     <td>{{event.close_date}}</td>
   </tr>
   <tr>
-    <td>Attendees</td>
-    <td>{{ attendees|length }} / {{event.capacity}}</td>
+    <td>Osallistujat</td>
+    <td>{{ attendees|length }}
+{% if event.capacity %}
+/ {{ event.capacity }}
+{% endif %}
+</td>
   </tr>
 </table>
-{% if event.image_url %}
-{% endif %}
 {{event.description}}
-<h3>Register</h3>
 {% if event.is_full and not event.backup %}
-<p>Event is full :(</p>
+<p>Tapahtuma on täynnä.</p>
 {% elif event.is_past %}
-<p>Registration time has past :|</p>
+<p>Ilmoittautuminen on päättynyt.</p>
 {% else %}
+<h3>Ilmoittautumislomake</h3>
 {% if event.backup and event.is_full %}
-<p>Event is full, you are registering on a backup place</p>
+<p>Tapahtuma on täynnä, ilmoittaudut varasijalle.</p>
 {% endif %}
 <form action="" role="form" method="post">
   {% csrf_token %}
   <table class='table'>
     {{ form.as_table }}
-  </table>
+  </table> 
 <div class="form-group">
-<input type="Submit" value="submit" class="btn btn-primary btn-block" />
+<input type="Submit" value="ilmoittaudu" class="btn btn-primary btn-block" />
 </div>
 </form>
-<h3>Attendees</h3>
+{% endif %}
+<h3>Osallistujat ({{attendees|length}})</h3>
 <div id="ilmoittautuneet" style="display: none;">
+<table class='table table-borderless'>
+<tr>
+<th>Nimi</th>{% if payment.method == "Tilisiirto" %}<th>Viitenumero</th>{% endif %}
+</tr>
 {% for attendee in attendees %}
-<p>{{attendee.attendee_name}} {% if attendee.isbackup %} - backup {% endif %}</p>
+<tr>
+<td>{{attendee.attendee_name}} {% if attendee.isbackup %} (varalla) {% endif %}</td>
+{% if payment.method == "Tilisiirto" %} <td>{{attendee.reference_number}}</td> {% endif %}
+</tr>
 {% endfor %}
+</table>
 </div>
-<div id='ilmoittautuneet_toggle' onclick="document.getElementById('ilmoittautuneet').style.display='';document.getElementById('ilmoittautuneet_toggle').style.display='none';" style="cursor: pointer;"><a>show attendees</a></div>
+<div id='ilmoittautuneet_toggle' onclick="document.getElementById('ilmoittautuneet').style.display='';document.getElementById('ilmoittautuneet_toggle').style.display='none';" style="cursor: pointer;"><a>Näytä ilmoittautuneet</a></div>
 
 </div>
-{% endif %}
 
 {% endblock content %}
