--- a/ilmo_app/templates/thanks.html
+++ b/ilmo_app/templates/thanks.html
@@ -38,7 +38,7 @@
       <th>{{payment.due_to}}</th>
     </tr>
     {% endif %}
-    {% if attendee.get_price %}
+    {% if attendee.get_reference_number %}
     <tr>
       <th>Viitenumero</th>
       <th>{{attendee.get_reference_number}}</th>
