--- a/ilmo_app/templates/list.html
+++ b/ilmo_app/templates/list.html
@@ -17,7 +17,7 @@
    {% if coming %}
     {% for event in coming_events %}
     <tr>
-      <th><a href ="{{event.form_name}}"> {{ event.name }}</a></th>
+      <th><a href ="{{ event.form.url_alias }}"> {{ event.name }}</a></th>
       <th>{{ event.event_date }}</th>
       <th>{{ event.close_date }}</th>
     </tr>
@@ -25,7 +25,7 @@
    {% else %}
     {% for event in event_list %}
     <tr>
-      <th><a href ="{{event.form_name}}"> {{ event.name }}</a></th>
+      <th><a href ="{{ event.form.url_alias }} "> {{ event.name }}</a></th>
       <th>{{ event.event_date }}</th>
       <th>{{ event.close_date }}</th>
     </tr>
@@ -42,7 +42,7 @@
     </tr>
     {% for event in head_past_events %}
     <tr>
-      <th><a href ="{{event.form_name}}"> {{ event.name }}</a></th>
+      <th><a href ="{{ event.form.url_alias }}"> {{ event.name }}</a></th>
       <th>{{ event.event_date }}</th>
       <th>{{ event.close_date }}</th>
     </tr>
