--- a/ilmo_app/templates/thanks.html
+++ b/ilmo_app/templates/thanks.html
@@ -3,50 +3,7 @@
 {% block title %}{% endblock title %}
 
 {% block content %}
-<div class="container">
-  <h2>Kiitos {{attendee.first_name}} ilmoittautumisesta!</h2>
-  {% if payment %}
-  <h3>Maksutiedot</h3>
-  <table class='table'>
-    {% if attendee.get_price %}
-    <tr>
-      <th>Hinta</th>
-      <th>{{attendee.get_price}}€</th>
-    </tr>
-    {% endif %}
-    {% if payment.method %}
-    <tr>
-      <th>Maksutapa</th>
-      <th>{{payment.method}}</th>
-    </tr>
-    {% endif %}
-    {% if payment.receiver %}
-    <tr>
-      <th>Maksun saaja</th>
-      <th>{{payment.receiver}}</th>
-    </tr>
-    {% endif %}
-    {% if payment.account %}
-    <tr>
-      <th>Tilinumero</th>
-      <th>{{payment.account}}</th>
-    </tr>
-    {% endif %}
-    {% if payment.due_to %}
-    <tr>
-      <th>Eräpäivä</th>
-      <th>{{payment.due_to}}</th>
-    </tr>
-    {% endif %}
-    {% if attendee.get_reference_number %}
-    <tr>
-      <th>Viitenumero</th>
-      <th>{{attendee.get_reference_number}}</th>
-    </tr>
-    {% endif %}
-  </table>
-  {% endif %}
-  <p>{{event.thank_you_text}}</p>
-
-</div>
+    <div class="container">
+        <p>{{ content }}</p>
+    </div>
 {% endblock content %}
