Update CDN link to the email template logo

--- a/ilmo_app/templates/email/registration_fi.html
+++ b/ilmo_app/templates/email/registration_fi.html
@@ -307,7 +307,7 @@
                 <table role="presentation" class="main">
                     <div style="align-content: center;">
                         <img class="header-img"
-                             src="https://scontent.fqlf1-1.fna.fbcdn.net/v/t1.0-9/50085499_1984836281565722_5531994271831293952_n.png?_nc_cat=105&_nc_ht=scontent.fqlf1-1.fna&oh=90b75bda255a30de5f4468b986d69a2d&oe=5D1DA70A"
+                             src="https://satakuntalainenosakunta.fi/static/img/logos/main.jpg"
                              alt=""/>
                     </div>
                     <!-- START MAIN CONTENT AREA -->
