--- a/ilmo_app/templates/email/registration_fi.html
+++ b/ilmo_app/templates/email/registration_fi.html
@@ -307,7 +307,7 @@
                 <table role="presentation" class="main">
                     <div style="align-content: center;">
                         <img class="header-img"
-                             src="https://satakuntalainenosakunta.fi/static/img/logos/main.jpg"
+                             src="https://satakuntalainenosakunta.fi/static/img/logos/main.png"
                              alt=""/>
                     </div>
                     <!-- START MAIN CONTENT AREA -->
